--- a/inane/vscode/settings.json
+++ b/inane/vscode/settings.json
@@ -3,5 +3,6 @@
     "telemetry.enableCrashReporter": false,
     "telemetry.enableTelemetry": false,
     "editor.formatOnSave": true,
-    "editor.tabSize": 2
+    "editor.tabSize": 2,
+    "update.showReleaseNotes": false
 }
