--- a/inane/vscode/settings.json
+++ b/inane/vscode/settings.json
@@ -2,9 +2,15 @@
     "workbench.startupEditor": "newUntitledFile",
     "telemetry.enableCrashReporter": false,
     "telemetry.enableTelemetry": false,
-    "editor.formatOnSave": true,
-    "editor.tabSize": 2,
     "update.showReleaseNotes": false,
     "workbench.editor.enablePreviewFromQuickOpen": false,
-    "workbench.list.openMode": "doubleClick"
+    "workbench.list.openMode": "doubleClick",
+    "workbench.preferredHighContrastColorTheme": "Default Light+",
+    "workbench.colorTheme": "Visual Studio 2019 Dark",
+    "editor.suggestSelection": "first",
+    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+    "java.configuration.checkProjectSettingsExclusions": false,
+    "editor.renderControlCharacters": false,
+    "editor.renderWhitespace": "none",
+    "editor.detectIndentation": false
 }
