editor settings updates

--- a/inane/vscode/settings.json
+++ b/inane/vscode/settings.json
@@ -1,16 +1,54 @@
 {
-    "workbench.startupEditor": "newUntitledFile",
-    "telemetry.enableCrashReporter": false,
-    "telemetry.enableTelemetry": false,
-    "update.showReleaseNotes": false,
-    "workbench.editor.enablePreviewFromQuickOpen": false,
-    "workbench.list.openMode": "doubleClick",
-    "workbench.preferredHighContrastColorTheme": "Default Light+",
-    "workbench.colorTheme": "Visual Studio 2019 Dark",
-    "editor.suggestSelection": "first",
-    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-    "java.configuration.checkProjectSettingsExclusions": false,
-    "editor.renderControlCharacters": false,
-    "editor.renderWhitespace": "none",
-    "editor.detectIndentation": false
+  "workbench.startupEditor": "newUntitledFile",
+  "telemetry.enableCrashReporter": false,
+  "telemetry.enableTelemetry": false,
+  "update.showReleaseNotes": false,
+  "workbench.editor.enablePreviewFromQuickOpen": false,
+  "workbench.list.openMode": "doubleClick",
+  "workbench.preferredHighContrastColorTheme": "Visual Studio 2017 Dark - C++",
+  "workbench.colorTheme": "Visual Studio 2017 Light - C++",
+  "editor.suggestSelection": "first",
+  "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+  "java.configuration.checkProjectSettingsExclusions": false,
+  "editor.renderControlCharacters": false,
+  "editor.renderWhitespace": "none",
+  "editor.detectIndentation": false,
+  "redhat.telemetry.enabled": false,
+  "editor.fontSize": 13,
+  "workbench.preferredHighContrastLightColorTheme": "Visual Studio 2017 Light - C++",
+  "database.connections": [],
+  "workbench.tree.indent": 20,
+  "files.trimTrailingWhitespace": true,
+  "explorer.autoReveal": "focusNoScroll",
+  "editor.tabSize": 2,
+  "editor.guides.indentation": false,
+  "files.insertFinalNewline": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact"
+  ],
+  "eslint.quiet": true,
+  "eslint.format.enable": true,
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  "javascript.updateImportsOnFileMove.enabled": "always",
+  "window.zoomLevel": 1,
+  "stretchySpaces.excludedLanguages": [
+    "markdown",
+    "plaintext",
+    "README.md",
+    "README",
+    "yml",
+    "yaml",
+    "md"
+  ],
+  "stretchySpaces.includedLanguages": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+  ],
+  "stretchySpaces.updateDelay": 10,
+  "editor.folding": false
 }
