--- a/config/zed/settings.json
+++ b/config/zed/settings.json
@@ -7,7 +7,7 @@
 // custom settings, run the `open default settings` command
 // from the command palette or from `Zed` application menu.
 {
-  "theme": "One Light",
+  "theme": "Andromeda",
   "ui_font_size": 16,
   "buffer_font_size": 16
 }
