--- a/inane/vscode/settings.json
+++ b/inane/vscode/settings.json
@@ -1,80 +1,89 @@
 {
-  "workbench.startupEditor": "newUntitledFile",
-  "telemetry.enableCrashReporter": false,
-  "telemetry.enableTelemetry": false,
-  "update.showReleaseNotes": false,
-  "workbench.editor.enablePreviewFromQuickOpen": false,
-  "workbench.list.openMode": "doubleClick",
-"workbench.preferredHighContrastColorTheme": "Visual Studio 2017 Dark - C++",
-  "editor.suggestSelection": "first",
-  "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-  "java.configuration.checkProjectSettingsExclusions": false,
-  "editor.renderControlCharacters": false,
-  "editor.renderWhitespace": "none",
-  "editor.detectIndentation": false,
-  "redhat.telemetry.enabled": false,
-  "editor.fontSize": 13,
-  "workbench.preferredHighContrastLightColorTheme": "Visual Studio 2017 Light - C++",
-  "database.connections": [],
-"workbench.tree.indent": 20,
-  "explorer.autoReveal": "focusNoScroll",
-  "editor.tabSize": 4,
-  "editor.guides.indentation": false,
-  "files.insertFinalNewline": true,
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": "explicit"
-},
-  "eslint.validate": [
+    "workbench.startupEditor": "newUntitledFile",
+    "telemetry.enableCrashReporter": false,
+    "telemetry.enableTelemetry": false,
+    "update.showReleaseNotes": false,
+    "workbench.editor.enablePreviewFromQuickOpen": false,
+    "workbench.list.openMode": "doubleClick",
+    "workbench.preferredHighContrastColorTheme": "Visual Studio 2017 Dark - C++",
+    "editor.suggestSelection": "first",
+    "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
+    "java.configuration.checkProjectSettingsExclusions": false,
+    "editor.renderControlCharacters": false,
+    "editor.renderWhitespace": "none",
+    "editor.detectIndentation": false,
+    "redhat.telemetry.enabled": false,
+    "editor.fontSize": 13,
+    "workbench.preferredHighContrastLightColorTheme": "Visual Studio 2017 Light - C++",
+    "database.connections": [],
+    "workbench.tree.indent": 20,
+    "explorer.autoReveal": "focusNoScroll",
+    "editor.tabSize": 4,
+    "editor.guides.indentation": false,
+    "files.insertFinalNewline": true,
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": "explicit"
+    },
+    "eslint.validate": [
     "javascript",
     "javascriptreact"
-  ],
-  "eslint.quiet": true,
-  "eslint.format.enable": true,
-  "typescript.updateImportsOnFileMove.enabled": "always",
-  "javascript.updateImportsOnFileMove.enabled": "always",
-  "stretchySpaces.excludedLanguages": [
-    "markdown",
-    "plaintext",
-    "README.md",
-    "README",
-    "yml",
-    "yaml",
-    "md"
-  ],
-  "stretchySpaces.includedLanguages": [
-    "javascript",
-    "javascriptreact",
-    "typescript",
-  ],
-  "stretchySpaces.updateDelay": 10,
-  "editor.folding": false,
-  "git.openRepositoryInParentFolders": "never",
-  "remove-tabs-on-save.ignoreFileExtensions": [
-    "*.go"
-  ],
-"editor.indentSize": "tabSize",
-"editor.inlineSuggest.enabled": true,
-"github.copilot.enable": {
-    "*": true,
-    "plaintext": false,
-    "markdown": false,
-    "scminput": false
-},
-"[plaintext]": {
-    "editor.wordWrap": "on"
-},
-"[ruby]": {
-  "editor.tabSize": 2,
-},
-"go.toolsManagement.autoUpdate": true,
-"cmake.configureOnOpen": false,
-"debug.openDebug": "neverOpen",
-"window.zoomLevel": 1,
-"files.trimTrailingWhitespace": true,
-"jest.disabledWorkspaceFolders": [],
-"workbench.preferredDarkColorTheme": "Visual Studio Dark - C++",
-"window.autoDetectHighContrast": false,
-"editor.rulers": [
-    80, 100
-]
+    ],
+    "eslint.quiet": true,
+    "eslint.format.enable": true,
+    "typescript.updateImportsOnFileMove.enabled": "always",
+    "javascript.updateImportsOnFileMove.enabled": "always",
+    "stretchySpaces.excludedLanguages": [
+        "markdown",
+        "plaintext",
+        "README.md",
+        "README",
+        "yml",
+        "yaml",
+        "md"
+    ],
+    "stretchySpaces.includedLanguages": [
+        "javascript",
+        "javascriptreact",
+        "typescript",
+    ],
+    "stretchySpaces.updateDelay": 10,
+    "editor.folding": false,
+    "git.openRepositoryInParentFolders": "never",
+    "remove-tabs-on-save.ignoreFileExtensions": [
+        "*.go"
+    ],
+    "editor.indentSize": "tabSize",
+    "editor.inlineSuggest.enabled": true,
+    "github.copilot.enable": {
+        "*": true,
+        "plaintext": false,
+        "markdown": false,
+        "scminput": false
+    },
+    "[plaintext]": {
+        "editor.wordWrap": "on"
+    },
+    "[ruby]": {
+        "editor.tabSize": 2,
+    },
+    "[erb]": {
+        "editor.defaultFormatter": "aliariff.vscode-erb-beautify",
+        "editor.formatOnSave": true
+    },
+    "vscode-erb-beautify.keepBlankLines": 2,
+    "go.toolsManagement.autoUpdate": true,
+    "cmake.configureOnOpen": false,
+    "debug.openDebug": "neverOpen",
+    "window.zoomLevel": 1,
+    "files.trimTrailingWhitespace": true,
+    "jest.disabledWorkspaceFolders": [],
+    "workbench.preferredDarkColorTheme": "Visual Studio Dark - C++",
+    "window.autoDetectHighContrast": false,
+    "editor.rulers": [
+        80, 100
+    ],
+    "workbench.colorTheme": "Default Light Modern",
+    "editor.accessibilitySupport": "off",
+    "editor.stickyScroll.enabled": false,
+    "github.copilot.editor.enableAutoCompletions": true
 }
